Use new builtin Base64 encoder/decoder